<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin_5dp"
        app:cardCornerRadius="@dimen/activity_margin_20dp"
        app:cardElevation="@dimen/activity_margin_7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_margin_10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin_5dp"
                    android:fontFamily="serif"
                    android:text="@string/vehicle"
                    android:layout_weight="1"
                    android:textColor="@color/apptheme"
                    android:textSize="@dimen/activity_margin_14dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/regValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin_5dp"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/vehNum"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/activity_margin_12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:paddingStart="@dimen/activity_margin_10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin_5dp"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/chassis"
                    android:textColor="@color/apptheme"
                    android:textSize="@dimen/activity_margin_14dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/chaValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin_5dp"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/chNum"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/activity_margin_12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/activity_margin_10dp"
                android:weightSum="2"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin_5dp"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/cerNo"
                    android:textColor="@color/apptheme"
                    android:textSize="@dimen/activity_margin_14dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/certNoVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin_5dp"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/certNum"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/activity_margin_12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:paddingStart="@dimen/activity_margin_10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin_5dp"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/stat"
                    android:textColor="@color/apptheme"
                    android:textSize="@dimen/activity_margin_14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/statusVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/activity_margin_5dp"
                    android:fontFamily="serif"
                    android:text="@string/vehNum"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/activity_margin_12dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>