<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightdarkcolorgrey"
    tools:context=".VerifySecure">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_marginBottom="@dimen/activity_margin_80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:isScrollContainer="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin_10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_margin_5dp"
                        android:text="@string/reg_ch_num"
                        android:textColor="@color/blackdark"
                        android:textSize="@dimen/activity_margin_17sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/selectRadio"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <RadioButton
                            android:id="@+id/regRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:buttonTint="@color/apptheme"
                            android:text="@string/regNum"
                            android:textSize="@dimen/activity_margin_14sp"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>
                        <RadioButton
                            android:id="@+id/chaRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/apptheme"
                            android:text="@string/chassisNum"
                            android:textSize="@dimen/activity_margin_14sp"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>

                    </RadioGroup>

                    <EditText
                        android:id="@+id/RegisterNumber"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/activity_margin_50dp"
                        android:layout_marginStart="@dimen/activity_margin_5dp"
                        android:layout_marginTop="@dimen/activity_margin_10dp"
                        android:layout_marginEnd="@dimen/activity_margin_5dp"
                        android:background="@drawable/edit_text"
                        android:hint="@string/regNum"
                        android:padding="@dimen/activity_margin_10dp" />

                </LinearLayout>



            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/activity_margin_30dp"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <android.widget.Button
            android:id="@+id/Btnscan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_10dp"
            android:layout_marginTop="@dimen/activity_margin_10dp"
            android:background="@drawable/roundedbuttongrey"
            android:padding="@dimen/activity_margin_10dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_margin_20sp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <android.widget.Button
            android:id="@+id/Btnverify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_10dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/activity_margin_10dp"
            android:background="@drawable/roundedbutton"
            android:padding="@dimen/activity_margin_10dp"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_margin_20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/apptheme" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>